pom version for the cmd line build for nick

--- a/plugins/vdm-antlr/pom.xml
+++ b/plugins/vdm-antlr/pom.xml
@@ -12,7 +12,7 @@
 	<properties>
 		<!-- ANTLR version, which percolates to all dependent POMs -->	
 		<!--<org.antlr.antlr-version>4.11.1</org.antlr.antlr-version>-->
-		<org.antlr.antlr-version>4.9.2</org.antlr.antlr-version>
+		<org.antlr.antlr-version>4.11.1</org.antlr.antlr-version>
 		<antlr4test-maven-plugin.version>1.22</antlr4test-maven-plugin.version>
 	</properties>
 
@@ -114,6 +114,7 @@
 					</includes>
 					<visitor>true</visitor>
 					<listener>true</listener>
+					<antlr4.atn>true</antlr4.atn>
 				</configuration>
 				<executions>
 					<execution>
