more memory + aST listener tracer

--- a/plugins/vdm-antlr/.vscode/settings.json
+++ b/plugins/vdm-antlr/.vscode/settings.json
@@ -69,5 +69,6 @@
     "antlr4.debug": {
       "visualParseTreeHorizontal": true,
       "visualParseTreeClustered": false
-    }
+    },
+    "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx2G -Xms100m -Xlog:disable"
 }
