--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ experiments/vdm/IsaGenOverture/target
 plugins/vdm-antlr/src/main/resources/output
 plugins/vdm-antlr/src/main/antlr4/.antlr
 plugins/vdm-antlr/src/main/java/vdmantlr/generated
+plugins/vdm2isa/pub/csv-lib/main.synctex.gz
+plugins/vdm2isa/pub/csv-lib/main.aux
+plugins/vdm2isa/pub/csv-lib/main.fdb_latexmk
+plugins/vdm2isa/pub/csv-lib/main.fls
