--- a/plugins/annotationsVDMToolkit/pom.xml
+++ b/plugins/annotationsVDMToolkit/pom.xml
@@ -1,17 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>annotationsVDMToolkit</artifactId>
-	<name>AnnotationsVDMToolkit</name>
-	<description>VDM Toolkit annotations</description>
-	
+
 	<parent>
 		<groupId>vdmtoolkit</groupId>
 		<artifactId>VDMToolkit-suite</artifactId>
 		<version>${revision}</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
-	
+
+	<artifactId>annotationsVDMToolkit</artifactId>
+	<name>AnnotationsVDMToolkit</name>
+	<description>VDM Toolkit annotations</description>
+		
 	<developers>
 		<developer>
 			<id>leouk</id>
@@ -28,6 +28,12 @@
 			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>vdmj</artifactId>
 			<version>${dk.au.ece.vdmj-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>dk.au.ece.vdmj</groupId>
+			<artifactId>vdmjunit</artifactId>
+			<version>${dk.au.ece.vdmj-version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>dk.au.ece.vdmj</groupId>
@@ -97,9 +103,31 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 			</plugin>
-			<plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+            <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+					<phase>package</phase>
+					<goals>
+						<goal>single</goal>
+					</goals>
+					<configuration>
+						<!-- <archive>
+						<manifest>
+							<mainClass>${fully.qualified.main.class}</mainClass>
+						</manifest>
+						</archive> -->
+						<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+						</descriptorRefs>
+					</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
