something is amiss on the pom. In VSCode tests go okay, on mvn install, some vdm2isa tests say modules couldn't be found?

--- a/plugins/vdm2isa/pom.xml
+++ b/plugins/vdm2isa/pom.xml
@@ -89,6 +89,12 @@
 									<include>*.thy</include>
 								</resource>
 								<resource>
+									<directory>src/test/resources/lvl0</directory>
+									<filtering>false</filtering>
+									<include>*.vdmsl</include>
+									<include>*.thy</include>
+								</resource>
+								<resource>
 									<directory>src/main/resources</directory>
 									<filtering>false</filtering>
 									<include>*.vdmsl</include>
