possibly add this if cache compromises environment

--- a/plugins/vdm-antlr/.vscode/launch.json
+++ b/plugins/vdm-antlr/.vscode/launch.json
@@ -7,6 +7,7 @@
             "request": "launch",
             "mainClass": "vdmantlr.VDMASTListener",
             "projectName": "vdm-antlr",
+            //"preLaunchTask": "clear-editor-history",
             "vmArgs": "-Dvdmj.plugins=plugins.analyses.IsabellePlugin",
             "cwd": "${workspaceFolder}${pathSeparator}src${pathSeparator}test${pathSeparator}resources"
         },
@@ -24,6 +25,7 @@
             "request": "launch",
             "name": "Expr test grammar",
             "input": "${file}",
+            //"preLaunchTask": "clear-editor-history",
             "grammar": "src/main/antlr4/Test.g4",
             //"actionFile": "grammars/exampleActions.js",
             "startRule": "expr_list",
@@ -36,6 +38,7 @@
             "request": "launch",
             "input": "${file}",
             "grammar": "src/main/antlr4/VDM.g4",
+            //"preLaunchTask": "clear-editor-history",
             //"actionFile": "grammars/exampleActions.js",
             "startRule": "expression_list",
             "printParseTree": true,
@@ -47,6 +50,7 @@
             "request": "launch",
             "input": "${file}",
             "grammar": "src/main/antlr4/VDM.g4",
+            //"preLaunchTask": "clear-editor-history",
             //"actionFile": "grammars/exampleActions.js",
             "startRule": "sl_document",
             "printParseTree": true,
