attempting at changing registry. wont' work. but document see email to nick

--- a/plugins/vdm2isa/pub/sorting/vdm/.vscode/settings.json
+++ b/plugins/vdm2isa/pub/sorting/vdm/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
-    "vdm-vscode.server.development.experimentalServer": false
+    "vdm-vscode.server.development.experimentalServer": true
 }
