Runner and initiak testst

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ plugins/vdm2isa/pub/csv-lib/main.fdb_latexmk
 plugins/vdm2isa/pub/csv-lib/main.fls
 experiments/vdm/Chesss/PP/lib/IO.vdmpp
 experiments/vdm/Chesss/PP/lib/VDMUnit.vdmpp
+IO.vdmsl
