play with chess + new stack frame thing cool.

--- a/plugins/vdm2isa/.vscode/launch.json
+++ b/plugins/vdm2isa/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "mainClass": "plugins.commands.IsabelleCommand",
             "projectName": "vdm2isa",
-            "vmArgs": "-Dvdmj.plugins=plugins.analyses.IsabellePlugin",
+            "vmArgs": "-Dvdmj.plugins=plugins.analyses.IsabellePlugin -Dvdmj.diag.max_stack=10",
             "cwd": "${workspaceFolder}${pathSeparator}src${pathSeparator}test${pathSeparator}resources"
         },
         {
