--- a/plugins/vdm2isa/.vscode/settings.json
+++ b/plugins/vdm2isa/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "java.configuration.updateBuildConfiguration": "automatic",
+    "java.configuration.updateBuildConfiguration": "interactive",
     "vdm-vscode.server.development.experimentalServer": true
 }
