--- a/plugins/annotationsVDMToolkit/.vscode/launch.json
+++ b/plugins/annotationsVDMToolkit/.vscode/launch.json
@@ -17,7 +17,7 @@
             "name": "VDMJ Test",
             "request": "launch",
             "noDebug": false,
-            "defaultName": "WitnessDates",
+            "defaultName": "MinimalTime",
         }
     ]
 }
