--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -24,6 +24,7 @@
 	<!-- sub modules -->
 	<modules>
 		<module>annotationsVDMToolkit</module>
+		<module>quickcheck</module>
 		<module>vdmlib</module>
 		<module>vdm2isa</module>
 		<module>vdm2isa-lsp</module>
@@ -36,8 +37,19 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+	             <groupId>junit</groupId>
+	             <artifactId>junit</artifactId>
+	             <version>4.13.1</version>
+	         <scope>test</scope>
+	     	</dependency>
+	    	<dependency>
 				<groupId>dk.au.ece.vdmj</groupId>
 				<artifactId>vdmj</artifactId>
+				<version>${dk.au.ece.vdmj-version}</version>
+			</dependency>
+	    	<dependency>
+				<groupId>dk.au.ece.vdmj</groupId>
+				<artifactId>quickcheck</artifactId>
 				<version>${dk.au.ece.vdmj-version}</version>
 			</dependency>
 			<dependency>
@@ -48,6 +60,11 @@
 			<dependency>
 				<groupId>dk.au.ece.vdmj</groupId>
 				<artifactId>lsp</artifactId>
+				<version>${dk.au.ece.vdmj-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>dk.au.ece.vdmj</groupId>
+				<artifactId>quickcheck</artifactId>
 				<version>${dk.au.ece.vdmj-version}</version>
 			</dependency>
 			<dependency>
@@ -67,24 +84,20 @@
 		<pluginManagement>
 			<plugins>
 				<!-- Configure the compiler for all VDM Tookit Projects -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.10.1</version>
-					<configuration>
-						<compilerArgs>
-							<arg>-Xlint:deprecation</arg>
-						</compilerArgs>
-						<source>1.8</source>
-						<target>1.8</target>
-					</configuration>
-				</plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.11.0</version>
+                    <configuration>
+                        <release>8</release>
+                    </configuration>
+                </plugin>
 
 				<!-- Attatch sources to all installed jars -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-source-plugin</artifactId>
-					<version>3.2.1</version>
+					<version>3.3.0</version>
 					<executions>
 						<execution>
 							<id>attach-sources</id>
@@ -103,7 +116,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>3.3.2</version>
+					<version>3.5.0</version>
 					<executions>
 						<execution>
 							<id>attach-javadocs</id>
@@ -122,7 +135,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
-					<version>3.1.0</version>
+					<version>3.3.1</version>
 				</plugin>
 
 				<plugin>
@@ -148,25 +161,25 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
-					<version>3.3.0</version>
+					<version>3.6.0</version>
 				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-install-plugin</artifactId>
-					<version>3.0.0-M1</version>
+					<version>3.1.1</version>
 				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-deploy-plugin</artifactId>
-					<version>3.0.0-M2</version>
+					<version>3.1.1</version>
 				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
-					<version>3.2.2</version>
+					<version>3.3.0</version>
 				</plugin>
 
 				<plugin>
@@ -180,6 +193,13 @@
 					<artifactId>maven-jarsigner-plugin</artifactId>
 					<version>3.0.0</version>
 				</plugin>
+				
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>3.0.1</version>
+                </plugin>
+
 			</plugins>
 		</pluginManagement>
 
@@ -191,7 +211,7 @@
             <plugin>
                 <groupId>com.outbrain.swinfra</groupId>
                 <artifactId>ci-friendly-flatten-maven-plugin</artifactId>
-                <version>1.0.14</version>
+                <version>1.0.17</version>
                 <executions>
                     <execution>
                         <goals>
@@ -202,7 +222,6 @@
                 </executions>
             </plugin>
         </plugins>
-
 	</build>
 
 	<scm>
