--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ plugins/vdm2isa/pub/csv-lib/main.fls
 experiments/vdm/Chesss/PP/lib/IO.vdmpp
 experiments/vdm/Chesss/PP/lib/VDMUnit.vdmpp
 IO.vdmsl
+plugins/quickcheck/target
