split into modules to make it viable for state to remain same

--- a/experiments/vdm/NDB/.vscode/vdmj.properties
+++ b/experiments/vdm/NDB/.vscode/vdmj.properties
@@ -1,2 +1,7 @@
 # Enable T! maximal type parsing
-vdmj.parser.maximal_types = true
+vdmj.parser.maximal_types=true
+
+# Enable merging of adjacent line comments into a single block comment.
+vdmj.parser.merge_comments=true
+
+# -Dvdmj.parser.maximal_types=true -Dvdmj.parser.merge_comments=true
