--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -24,7 +24,7 @@
 	<!-- sub modules -->
 	<modules>
 		<module>annotationsVDMToolkit</module>
-		<module>quickcheck</module>
+		<module>quickcheck2isa</module>
 		<module>vdmlib</module>
 		<module>vdm2isa</module>
 		<module>vdm2isa-lsp</module>
@@ -89,7 +89,7 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.11.0</version>
                     <configuration>
-                        <release>8</release>
+                        <release>11</release>
                     </configuration>
                 </plugin>
 
