--- a/.github/workflows/maven-test.yml
+++ b/.github/workflows/maven-test.yml
@@ -73,9 +73,9 @@ jobs:
             }
           ]
     - name: Maven clean install
-      run: mvn -B clean install --file plugins/pom.xml
+      run: mvn -B clean install --file pom.xml
     - name: Maven test
-      run: mvn -B test --file plugins/pom.xml
+      run: mvn -B test --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
