--- a/pom.xml
+++ b/pom.xml
@@ -243,6 +243,14 @@
             </roles>
         </developer>
     </developers>
+    
+    <distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Packages</name>
+			<url>https://maven.pkg.github.com/leouk/VDM_Toolkit</url>
+		</repository>
+	</distributionManagement>
 
     <licenses>
         <license>
