--- a/annotationsVDMToolkit/pom.xml
+++ b/annotationsVDMToolkit/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>vdmtoolkit</groupId>
 		<artifactId>VDMToolkit-suite</artifactId>
-		<version>${revision}</version>
+	    <version>${revision}${sha1}${changelist}</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
