--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,7 @@
 	<name>VDMToolkit Suite</name>
 	<packaging>pom</packaging>
 	<!-- This version is inherited by all modules -->
-    <version>${revision}${sha1}${changelist}
-    </version>
+    <version>${revision}${sha1}${changelist}</version>
 
 	<properties>
 	    <maven.build.timestamp.format>yyMMdd</maven.build.timestamp.format>
